--- a/packages/vuepress-theme-odyssey/styles/index.scss
+++ b/packages/vuepress-theme-odyssey/styles/index.scss
@@ -52,7 +52,7 @@ a:visited {
     justify-content: center;
     margin-bottom: $spacing-xl;
     padding: $spacing-l * 2 $spacing-m 0;
-
+    max-width: 100%;
     // TODO: We would like to remove this in the future
     // so that the grid width is determined by the content
     // as opposed to a max-width.
